# NewCampusExpress

./: CMakeLists.txt
docs/: design.md
include/core/: AVLTree.h  Config.h  DatabaseConnector.h  Package.h  User.h  UserType.h
include/gui/: DialogManager.h  LoginWindow.h  StaffWindow.h  UserWindow.h  styles.h
include/pickup/: PickupQueue.h  PickupScheduler.h  PickupService.h  types.h
include/staff/: PackageManager.h  StaffService.h  UserManager.h
src/: main.cpp
src/core/: AVLTree.cpp  CMakeLists.txt  Config.cpp  DatabaseConnector.cpp  Package.cpp  User.cpp
src/gui/: CMakeLists.txt  DialogManager.cpp  LoginWindow.cpp  LoginWindow.ui  StaffWindow.cpp  StaffWindow.ui  UserWindow.cpp  UserWindow.ui  styles.cpp
src/pickup/: CMakeLists.txt  PickupQueue.cpp  PickupScheduler.cpp  PickupService.cpp
src/staff/: CMakeLists.txt  PackageManager.cpp  StaffService.cpp  UserManager.cpp
